--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
   "devDependencies": {
     "gh-pages": "^3.2.3"
   },
-  "homepage": "http://Yun-Jehyeok.github.io/Yun-Jehyeok"
+  "homepage": "http://yun-jehyeok.github.io/Jehyeok"
 }
